Improve temperature accuracy, update viewport meta, fix weathercontainer responsiveness on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header > h1 {
 
 .weatherContainer {
     font-family: 'Raleway', sans-serif;
-    width: 500px;
+    max-width: 500px;
     height: 225px;
     background: #383e4a;
     margin: 10vh auto;
